# telemetry_server

./: .bumpversion.toml  .dockerignore  .env.example  .gitignore  Dockerfile  README.html  README.md  TODO.md  app.py  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements.txt  ruff.toml  update_version.py
.github/: dependabot.yml
.github/scripts/: compute-release-tags.sh  ghcr_cleanup.sh
.github/workflows/: build-and-push.yml  build.yml  bump-version.yml  codeql.yml  push.yml  python-publish.yml  tailscale.yml
docker/: README.md  app-entrypoint.sh
docker/cloudflared/: config.yml  entrypoint.sh
docker/cron/: Dockerfile  cron-entrypoint.sh
docker/tailscale/: Dockerfile
routes/: autopilot_parameters.py  boat_status.py  waypoints.py
server_files/: Dockerfile  auto_clean.txt  cloud-init-user-data.sh  install.sh  nginx_autoboat.conf  nginx_autoboat_nossl.conf  nginx_autoboat_ssl.conf  nginx_docker.conf  quick-install.sh  supervisor_autoboat.conf
server_files/docker/: README.md
server_files/docker/cloudflared/: entrypoint.sh
server_files/docker/cron/: cron-entrypoint.sh
src/: app.py
src/autoboat_telemetry_server/: __init__.py  _autopilot_parameters.py  _boat_status.py  _waypoints.py  autopilot_conf_manager.py  lock_manager.py  models.py  types.py
src/autoboat_telemetry_server/routes/: __init__.py  autopilot_parameters.py  boat_status.py  instance_manager.py  waypoints.py
src/instance/: config.py
tailscale/: policy.hujson
